fixed bottom overflow

--- a/client/src/Layout/Workspace/workspace.css
+++ b/client/src/Layout/Workspace/workspace.css
@@ -205,6 +205,7 @@
   background-color: background;
   order: 2;
   display: flex;
+  flex-direction: column;
   flex: 0 1 auto;
   margin-top: 10px;
   box-shadow: lightShadow;
